--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 body{
     font-family: "Poppins", sans-serif;
     font-weight: 500;
-    background-color: black;
+    background-color: #000000;
     color: white;
     width: 100%;
     height: 100%;
